--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "license": "Apache-2.0",
   "author": {
-    "name": "Yadong Zhagn",
+    "name": "Yadong Zhang",
     "email": "zhyd007@gmail.com",
     "url": "https://github.com/007tom"
   },
