--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint --no-cache",
-    "prettier": "yarn prettier --write src/**/*.{js,jsx,ts,tsx}",
+    "prettier": "prettier --write src/**/*.{ts,tsx}",
     "prepare": "husky install"
   },
   "dependencies": {
