--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.2.4",
     "@mui/material": "^5.2.4",
+    "@zhyd1997/draftjs-to-latex": "^0.2.0",
     "classnames": "^2.3.1",
     "draft-js": "^0.11.7",
     "highlight.js": "^11.3.1",
     "immutable": "^4.0.0",
     "katex": "^0.15.1",
     "next": "^12.0.7",
+    "next-transpile-modules": "^9.0.0",
     "react": "^17.0.2",
     "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2"
