--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,16 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+node_modules
 /.pnp
 .pnp.js
 
 # testing
-/coverage
+coverage
 
 # production
-/build
-/.next
+build
+.next
 
 # misc
 .DS_Store
