--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "files": [
-    "eslint-preset.json"
+    "eslint-preset.js"
   ],
   "dependencies": {
     "eslint-config-next": "12.0.7",
