build: fix failure deployment for docs app.

--- a/turbo.json
+++ b/turbo.json
@@ -5,7 +5,7 @@
           "^build"
         ],
         "outputs": [
-          "dist/**",
+          "build/**",
           ".next/**"
         ]
       },
