--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "description": "A Paper Typesetting Editor",
   "workspaces": [
+    "docs",
     "apps/*",
     "packages/*"
   ],
@@ -32,6 +33,7 @@
     "eslint": "8.4.1",
     "husky": "^7.0.4",
     "lint-staged": "^12.1.2",
+    "prettier": "2.5.1",
     "turbo": "^1.1.1"
   },
   "packageManager": "pnpm@6.28.0"
