--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "author": "Yadong Zhang",
   "license": "Apache-2.0",
   "devDependencies": {
-    "eslint": "8.4.1",
+    "eslint": "^9.27.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.1.2",
     "prettier": "2.5.1",
