--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -11,7 +11,12 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@lexical/link": "^0.31.1",
+    "@lexical/list": "^0.31.1",
     "@lexical/react": "^0.31.1",
+    "@lexical/rich-text": "^0.31.1",
+    "@lexical/selection": "^0.31.1",
+    "@lexical/table": "^0.31.1",
     "@lexical/utils": "^0.31.1",
     "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-separator": "^1.1.6",
