feat(packages/editor): added editor toolbar. (#111)
* feat(packages/editor): added editor toolbar.

* fix(packages/editor): removed redundant ts directives.

* build: bumped eslint from v8 to v9.

* fix(packages/editor): used `Context` in React 19.

* feat(packages/editor): added editor styles.

* feat(packages/editor): added editor container styles.

* feat(packages/editor): added format utils.

+ refactor(packages/editor): moved contexts to root folder.
+ refactor(packages/editor): moved `BlockFormatDropdown` component into `ToolbarPlugin` folder.

* feat(packages/editor): added theme config.

--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -11,8 +11,17 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@lexical/link": "^0.31.1",
+    "@lexical/list": "^0.31.1",
     "@lexical/react": "^0.31.1",
+    "@lexical/rich-text": "^0.31.1",
+    "@lexical/selection": "^0.31.1",
+    "@lexical/table": "^0.31.1",
+    "@lexical/utils": "^0.31.1",
+    "@radix-ui/react-select": "^2.2.4",
+    "@radix-ui/react-separator": "^1.1.6",
     "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-tooltip": "^1.2.6",
     "@tailwindcss/vite": "^4.1.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^1.2.1",
