--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -19,6 +19,7 @@
     "@lexical/selection": "^0.31.1",
     "@lexical/table": "^0.31.1",
     "@lexical/utils": "^0.31.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-separator": "^1.1.6",
     "@radix-ui/react-slot": "^1.2.2",
