--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,37 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
+# Dependencies
 node_modules
-/.pnp
+.pnp
 .pnp.js
 
-# testing
-coverage
-
-# production
-build
-.next
-
-# misc
-.DS_Store
+# Local env files
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-.idea
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
+
+# Testing
+coverage
+
+# Turbo
 .turbo
+
+# Vercel
+.vercel
+
+# Build Outputs
+.next/
+out/
+build
+dist
+
+.idea
+
+# Debug
+npm-debug.log*
+
+# Misc
+.DS_Store
+*.pem
