--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build": "turbo run build",
     "dev": "turbo run dev --parallel",
     "lint": "turbo run lint",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "prepare": "husky install"
   },
   "repository": {
@@ -30,11 +31,17 @@
   "author": "Yadong Zhang",
   "license": "Apache-2.0",
   "devDependencies": {
+    "@softmaple/eslint-config": "workspace:*",
+    "@softmaple/typescript-config": "workspace:*",
     "eslint": "^9.27.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.1.2",
-    "prettier": "2.5.1",
-    "turbo": "^2.5.3"
+    "prettier": "^3.5.3",
+    "turbo": "^2.5.3",
+    "typescript": "5.7.3"
   },
-  "packageManager": "pnpm@10.10.0"
+  "packageManager": "pnpm@10.10.0",
+  "engines": {
+    "node": ">=20"
+  }
 }
