--- a/packages/editor/tsconfig.json
+++ b/packages/editor/tsconfig.json
@@ -7,7 +7,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@softmaple/md2latex/*": ["../md2latex/*"]
     }
   }
 }
