--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -12,6 +12,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@lexical/code": "^0.31.2",
     "@lexical/link": "^0.31.2",
     "@lexical/list": "^0.31.2",
     "@lexical/markdown": "^0.31.2",
