--- a/packages/editor/tsconfig.app.json
+++ b/packages/editor/tsconfig.app.json
@@ -26,7 +26,7 @@
     /* shadcn ui */
     "baseUrl": ".",
     "paths": {
-      "@/*": [
+      "@softmaple/editor/*": [
         "./src/*"
       ],
       "@softmaple/md2latex/*": ["../md2latex/*"]
