--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -20,12 +20,8 @@
     "@lexical/selection": "^0.31.2",
     "@lexical/table": "^0.31.2",
     "@lexical/utils": "^0.31.2",
-    "@radix-ui/react-dropdown-menu": "^2.1.15",
-    "@radix-ui/react-select": "^2.2.4",
-    "@radix-ui/react-separator": "^1.1.6",
-    "@radix-ui/react-slot": "^1.2.2",
-    "@radix-ui/react-tooltip": "^1.2.6",
     "@softmaple/md2latex": "workspace:*",
+    "@softmaple/ui": "workspace:*",
     "@tailwindcss/vite": "^4.1.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^1.2.1",
