--- a/packages/editor/tsconfig.app.json
+++ b/packages/editor/tsconfig.app.json
@@ -26,10 +26,9 @@
     /* shadcn ui */
     "baseUrl": ".",
     "paths": {
-      "@softmaple/editor/*": [
-        "./src/*"
-      ],
-      "@softmaple/md2latex/*": ["../md2latex/*"]
+      "@softmaple/editor/*": ["./src/*"],
+      "@softmaple/md2latex/*": ["../md2latex/*"],
+      "@softmaple/ui/*": ["../../packages/ui/src/*"]
     }
   },
   "include": ["src"]
