--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -4,7 +4,8 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./*"],
-      "@softmaple/ui/*": ["../../packages/ui/src/*"]
+      "@softmaple/ui/*": ["../../packages/ui/src/*"],
+      "@softmaple/editor/*": ["../../packages/editor/src/*"],
     },
     "plugins": [
       {
