feat: setup supabase with Prisma in turborepo.

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -6,6 +6,7 @@
       "@/*": ["./*"],
       "@softmaple/ui/*": ["../../packages/ui/src/*"],
       "@softmaple/editor/*": ["../../packages/editor/src/*"],
+      "@softmaple/db/*": ["../../packages/db/src/*"],
     },
     "plugins": [
       {
