--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,8 +12,9 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@softmaple/ui": "workspace:*",
     "@softmaple/editor": "workspace:*",
+    "@softmaple/ui": "workspace:*",
+    "@supabase/ssr": "^0.6.1",
     "lucide-react": "^0.475.0",
     "next": "^15.3.2",
     "next-themes": "^0.4.4",
@@ -21,11 +22,12 @@
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
+    "@softmaple/eslint-config": "workspace:^",
+    "@softmaple/typescript-config": "workspace:*",
+    "@softmaple/db": "workspace:*",
     "@types/node": "^20",
     "@types/react": "^19.1.5",
     "@types/react-dom": "^19.1.5",
-    "@softmaple/eslint-config": "workspace:^",
-    "@softmaple/typescript-config": "workspace:*",
     "typescript": "^5.7.3"
   }
 }
