ci: corrected db migration path.

--- a/.github/workflows/prisma-migrate.yml
+++ b/.github/workflows/prisma-migrate.yml
@@ -2,7 +2,7 @@ name: Migrate Prisma Schema Changes
 on:
   push:
     paths:
-      - prisma/migrations/**
+      - packages/prisma/migrations/**
     branches:
       - next
 
