--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,6 +16,7 @@
     "@softmaple/editor": "workspace:*",
     "@softmaple/ui": "workspace:*",
     "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.49.8",
     "lucide-react": "^0.475.0",
     "next": "^15.3.2",
     "next-themes": "^0.4.4",
@@ -23,9 +24,9 @@
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
+    "@softmaple/db": "workspace:*",
     "@softmaple/eslint-config": "workspace:^",
     "@softmaple/typescript-config": "workspace:*",
-    "@softmaple/db": "workspace:*",
     "@types/node": "^20",
     "@types/react": "^19.1.5",
     "@types/react-dom": "^19.1.5",
