--- a/.github/workflows/prisma-migrate.yml
+++ b/.github/workflows/prisma-migrate.yml
@@ -31,6 +31,7 @@ jobs:
         run: pnpm install
 
       - name: Apply all pending migrations to the database
+        working-directory: packages/db
         run: pnpm run db:migrate
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
