--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,11 +12,18 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@lexical/react": "^0.31.2",
+    "@liveblocks/client": "^2.24.3",
+    "@liveblocks/node": "^2.24.3",
+    "@liveblocks/react": "^2.24.3",
+    "@liveblocks/react-lexical": "^2.24.3",
+    "@liveblocks/react-ui": "^2.24.3",
     "@softmaple/config": "workspace:*",
     "@softmaple/editor": "workspace:*",
     "@softmaple/ui": "workspace:*",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.8",
+    "lexical": "^0.31.2",
     "lucide-react": "^0.475.0",
     "next": "^15.3.2",
     "next-themes": "^0.4.4",
