fix: add `LIVEBLOCKS_SECRET_KEY` environment variable for build tasks

--- a/turbo.json
+++ b/turbo.json
@@ -3,6 +3,7 @@
   "tasks": {
     "build": {
       "dependsOn": ["^build", "^db:generate"],
+      "env": ["LIVEBLOCKS_SECRET_KEY"],
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
       "outputs": [".next/**", "!.next/cache/**", "dist/**", "build/**"]
     },
