refactor(apps/web): reorganize authentication components and improve workspace dialog

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -24,6 +24,7 @@
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.8",
     "lexical": "^0.31.2",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.475.0",
     "next": "^15.3.2",
     "next-themes": "^0.4.4",
@@ -34,6 +35,7 @@
     "@softmaple/db": "workspace:*",
     "@softmaple/eslint-config": "workspace:^",
     "@softmaple/typescript-config": "workspace:*",
+    "@types/lodash": "^4.17.17",
     "@types/node": "^20",
     "@types/react": "^19.1.5",
     "@types/react-dom": "^19.1.5",
