--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -34,15 +34,12 @@
     "tailwindcss": "^4.1.6"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^3.2.6",
+    "@chromatic-com/storybook": "^4.0.0-next.16",
     "@eslint/js": "^9.25.0",
-    "@storybook/addon-essentials": "^8.6.14",
-    "@storybook/addon-onboarding": "^8.6.14",
-    "@storybook/blocks": "^8.6.14",
-    "@storybook/experimental-addon-test": "^8.6.14",
-    "@storybook/react": "^8.6.14",
-    "@storybook/react-vite": "^8.6.14",
-    "@storybook/test": "^8.6.14",
+    "@storybook/addon-docs": "9.1.0-alpha.2",
+    "@storybook/addon-onboarding": "^9.1.0-alpha.2",
+    "@storybook/addon-vitest": "9.1.0-alpha.2",
+    "@storybook/react-vite": "^9.1.0-alpha.2",
     "@types/node": "^22.15.18",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
@@ -52,10 +49,10 @@
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
-    "eslint-plugin-storybook": "^0.12.0",
+    "eslint-plugin-storybook": "^9.1.0-alpha.2",
     "globals": "^16.0.0",
     "playwright": "^1.52.0",
-    "storybook": "^8.6.14",
+    "storybook": "^9.1.0-alpha.2",
     "tw-animate-css": "^1.3.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
