--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -23,6 +23,7 @@
     "@softmaple/ui": "workspace:*",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.8",
+    "dayjs": "^1.11.13",
     "lexical": "^0.31.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.511.0",
