--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -30,7 +30,8 @@
     "next": "^15.3.3",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "zod": "^3.25.48"
   },
   "devDependencies": {
     "@softmaple/db": "workspace:*",
