ci: enable `pnpm dedupe` in renovate config

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -139,6 +139,7 @@
   "commitMessageAction": "update",
   "commitMessageTopic": "{{depName}}",
   "commitMessageExtra": "to {{newVersion}}",
+  "postUpdateOptions": ["pnpmDedupe"],
   "lockFileMaintenance": {
     "enabled": true,
     "schedule": ["before 10am on monday"]
