--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -46,6 +46,7 @@
     "@vitejs/plugin-react": "^4.5.1",
     "@vitest/browser": "^3.2.0",
     "@vitest/coverage-v8": "^3.2.0",
+    "chromatic": "^12.1.1",
     "eslint": "^9.28.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
