chore(ci): update Chromatic configuration to set permissions and working directory

--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -2,6 +2,9 @@ name: "Chromatic"
 
 on: push
 
+permissions:
+  contents: read
+
 jobs:
   chromatic:
     name: Run Chromatic
@@ -32,3 +35,4 @@ jobs:
         with:
           # ⚠️ Make sure to configure a `CHROMATIC_PROJECT_TOKEN` repository secret
           projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
+          workingDir: packages/editor
