ci: add additional package match patterns for `chromatic` and `eslint-plugin-storybook`

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -78,7 +78,9 @@
       "matchPackageNames": [
         "storybook",
         "/^@storybook\\//",
-        "/^@chromatic-com\\//"
+        "/^@chromatic-com\\//",
+        "chromatic",
+        "eslint-plugin-storybook"
       ],
       "automerge": true,
       "automergeType": "pr",
